# ak_lab4

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION.md  README.md  pyproject.toml
ak_lab4_old/: DESCRIPTION.md  README.md  README_example.md
ak_lab4_old/docs/: scheme_cu.drawio
ak_lab4_old/src/: microcode_memory.py
ak_lab4_old/tests/: test_golden.py
ak_lab4_old/tests/golden/: README.md  cat.yml  double_precision.yml  prob1.yml
docs/: scheme copy 2.drawio  scheme copy.drawio  scheme_cu.drawio  scheme_datapath.drawio
src/: isa.py  machine.py  microcode_memory.py  run_code.py  translator.py
tests/: test_golden.py
tests/golden/: README.md  cat.yml  double_precision.yml  features.yml  features_addressing.yml  features_cisc_registers.yml  features_preprocessor.yml  hello.yml  hello_user_name.yml  prob1.yml  sort.yml
