[project]
name = "ak-lab-4"
version = "0.1.0"
description = "AK lab 4"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
run_code = "src.run_code:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.5",
    "types-pyyaml>=6.0.12.20260518",
]
